[package]
name = "csv_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = false, features = [ "std" ]}
csv = "1.1"
serde = "1.0.197"
hex = "0.4.3"
zkcsv-core = { path = "../../core" }